Reworked tooltips for gene model so that tooltip isn't offscreen when hovering over exons or UTRs that are close to the left or right edge of the screen. https://github.com/tonydisera/gene.iobio/issues/189

--- a/assets/css/sass/_tooltip.sass
+++ b/assets/css/sass/_tooltip.sass
@@ -262,7 +262,32 @@ text
     content: ""
     right: 10px
  
+.tooltip.black-arrow-left
+  &:after
+    position: absolute
+    display: inline-block
+    border-top: 8px solid transparent
+    border-right: 8px solid rgb(80,80,80)
+    border-bottom: 8px solid transparent
+    left: -3px
+    bottom: -5px
+    -webkit-transform: rotate(209deg)
+    transform: rotate(209deg)
+    content: ""
 
+.tooltip.black-arrow-right
+  &:after
+    position: absolute
+    display: inline-block
+    border-top: 8px solid transparent
+    border-left: 8px solid rgb(80,80,80)
+    border-bottom: 8px solid transparent
+    right: -3px
+    bottom: -5px
+    -webkit-transform: rotate(152deg)
+    transform: rotate(152deg)
+    content: ""
+    
 
 #examine-card .tooltip-allele-count-bar
   font-family: $app-font, sans-serif !important
